# anonwise

./: .env  Dockerfile  README.md  anonwise.ini  docker-compose.yml  pyproject.toml  train_credit_card.spacy
data/raw_data/: ner_ad_ids.json
src/: data_processing.py  evaluate.py  serve.py
